# tetravex-solver

./: .clang-tidy  CMakeLists.txt
data/: 2x2.txt
src/: main.cpp
src/engine/: game.cpp  game.h  game_generator.cpp  game_generator.h
src/solver/: solver.cpp  solver.h  thread_pool.cpp  thread_pool.h
tools/cmake/: cmake_install.cmake  longlp_desired_compile_features.cmake  longlp_desired_compile_options.cmake  longlp_make_exec.cmake  longlp_make_library.cmake
